# ai-from-scratch-cpp

./: CMakeLists.txt  README.md  course-outline.md  optimizer_table.md  summary.md
include/: common.hpp  datasynth.hpp  matrix.hpp
include/models/: cnn.hpp  decision_tree.hpp  ga.hpp  kmeans.hpp  knearest_neighbors.hpp  linear_regression.hpp  logistic_regression.hpp  mlp.hpp  naivebayes_classifier.hpp  optimizers.hpp  pca.hpp  perceptron.hpp  q_learning.hpp  random_forest.hpp  regularization.hpp  rnn.hpp  svm.hpp
src/: main.cpp  matrix.cpp
src/models/: cnn.cpp  decision_tree.cpp  ga.cpp  kmeans.cpp  knearest_neighbors.cpp  linear_regression.cpp  logistic_regression.cpp  mlp.cpp  naivebayes_classifier.cpp  pca.cpp  perceptron.cpp  q_learning.cpp  random_forest.cpp  rnn.cpp  svm.cpp
tests/: CMakeLists.txt  test_cnn.cpp  test_conv.cpp  test_decision_tree.cpp  test_ga.cpp  test_knearest_neighbors.cpp  test_linear_regression.cpp  test_logistic_regression.cpp  test_main.cpp  test_matrix.cpp  test_mlp.cpp  test_mnist_mlp.cpp  test_naivebayes_classifier.cpp  test_optimizers.cpp  test_perceptron.cpp  test_q_learning.cpp  test_random_forest.cpp  test_regularization.cpp  test_rnn.cpp  test_svm.cpp  test_unsupervised.cpp
theory/: week1_linear_regression.md  week2_logistic_regression.md
visualizer/: CMakeLists.txt  plotter.hpp  vis_convolution.cpp  vis_ga.cpp  vis_linear_regression.cpp  vis_optimizers.cpp  vis_qlearning.cpp  vis_unsupervised.cpp  visualizer_main.cpp
